crates/clan/clan-core/tests/snapshots/transform_golden__tierorder_pho@clan.snap
---
source: tests/transform_golden.rs
expression: "&clan_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child, MOT Mother
@ID:	eng|corpus|CHI|2;0||||Child|||
@ID:	eng|corpus|MOT|||||Mother|||
@Comment:	Phonological tier with pho_group delimiters and %mod tier
@Comment:	Constructs: pho_dependent_tier, pho_tier_prefix, pho_words, pho_word,
	pho_group, pho_grouped_content, pho_groups, mod_dependent_tier
