crates/clan/clan-core/tests/snapshots/transform_golden__trim_exclude_all@rust.snap
---
source: crates/talkbank-clan/tests/transform_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child, MOT Mother
@ID:	eng|corpus|CHI|3;00.||||Child|||
@ID:	eng|corpus|MOT|||||Mother|||
@Comment:	Morphology and grammatical relations tiers
@Comment:	Constructs: mor_dependent_tier, mor_tier_prefix, mor_contents, mor_content,
	mor_word, mor_pos, mor_lemma, mor_feature, mor_feature_value, mor_post_clitic,
	gra_dependent_tier, gra_tier_prefix, gra_contents, gra_relation,
	gra_index, gra_head, gra_relation_name, pipe
*CHI:	it's I want cookies .
*MOT:	Mommy will get them .
@End
